<resources>
    <string name="app_name">Free Ringtone</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Free Ringtone</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_downloads">My Downloads</string>
    <string name="request_new_ringtone">Request new ringtone</string>
    <string name="popular">Popular</string>
    <string name="category">Category</string>
    <string name="go_to_website">Go to Website</string>
    <string name="wait_process">Loading...</string>
    <string name="errorProcess">Have some error, please try again.</string>
    <string name="new_ringtone">New Ringtone</string>
    <string name="rq_new_ringtone">Request New Ringtone</string>
    <string name="song_title">Song title</string>
    <string name="singer">Singer</string>
    <string name="your_email">Your Email</string>
    <string name="submit">SUBMIT</string>
    <string name="give_5_star_now" >Give 5 Star now</string>
    <string name="set_default_ringtone">Set default Ringtone</string>
    <string name="set_ringtone_contact">Set Ringtone Contact</string>
    <string name="set_default_alarm">Set Default Alarm</string>
    <string name="downloading_pls_wait">Downloading, please wait...</string>
    <string name="change_success">Change success!</string>
    <string name="change_failed">Change failed!</string>
    <string name="has_problem">Has problem, please retry again!</string>
    <string name="ok">Ok</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_set">Are you sure you want to set this ringtone?</string>
    <string name="cancel">CANCEL</string>
    <string name="_ok">OK</string>
    <string name="my_download">My Download</string>
    <string name="feedback_support">Feedback/Support</string>
    <string name="send_feedback">Send feedback</string>
    <string name="no_internet_connection">No internet connection! Please try again</string>
    <string name="ringtone">Ringtone</string>

    <string name="na">N/A</string>
    <string name="ringtone_not_found">Ringtone not found</string>
    <string name="reset_ringtone">Reset ringtone</string>
    <string name="studio_email">dangthithu.hlu@gmail.com</string>

    <string name="app_id_ads">ca-app-pub-9914291577588250~2000000973</string>
    <string name="no_connect_internet">No Internet Access</string>
    <string name="check_your_internet2">Check your connect Internet and Restart app</string>
    <string name="show_ads">Complete load Data. Ads loading...</string>
    <string name="content_loadding">Check connect internet and loading new data.</string>


    <string name="download_error">Download error</string>
    <string name="download_complete">Download complete</string>
    <string name="download_start">Download start</string>

    <string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>


