<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="freeringtones.newringtones.dowloadringtones.iphoneringtone2222.RequestRingtoneActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/dp_12">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/rq_new_ringtone"
            android:textColor="@color/color_white"
            android:textSize="@dimen/pt_10" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:id="@+id/prLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp_16">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16">

                <EditText
                    android:id="@+id/edtSongTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/song_title"
                    android:textColor="@color/color_black_90"
                    android:textColorHint="@color/colorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16">

                <EditText
                    android:id="@+id/edtSinger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/singer"
                    android:textColor="@color/color_black_90"
                    android:textColorHint="@color/colorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16">

                <EditText
                    android:id="@+id/edtYourEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_email"
                    android:textColor="@color/color_black_90"
                    android:textColorHint="@color/colorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdoNewRingtone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true"
                    android:text="New ringtone"
                    android:textColorHint="@color/colorPrimary" />

                <RadioButton
                    android:id="@+id/rdoUpdateRingtone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_32"
                    android:buttonTint="@color/colorPrimary"
                    android:text="Update ringtone"
                    android:textColorHint="@color/colorPrimary" />
            </RadioGroup>

            <Button
                android:id="@+id/btnSubmitRequestRingtone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_32"
                android:background="@drawable/bg_button_submit"
                android:text="@string/submit"
                android:textColor="@color/color_white" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
